bundled_metadata/force-app/main/default/objects/AFH_POS_Kits_Order_Logic__mdt/AFH_POS_Kits_Order_Logic__mdt.object-meta.xml
<CustomObject>
    <label>AFH POS Kits Order Logic</label>
    <pluralLabel>AFH POS Kits Order Logics</pluralLabel>
</CustomObject>