bundled_metadata/force-app/main/default/objects/AFH_POS_Kits_Order_Logic__mdt/fields/AFH_Capacity__c.field-meta.xml
<CustomField>
    <fullName>AFH_Capacity__c</fullName>
    <label>AFH Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>