bundled_metadata/force-app/main/default/objects/AFH_POS_Kits_Order_Logic__mdt/fields/AFH_Channel__c.field-meta.xml
<CustomField>
    <fullName>AFH_Channel__c</fullName>
    <label>AFH Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pub / Bar</fullName>
                <default>true</default>
                <label>Pub / Bar</label>
            </value>
            <value>
                <fullName>Coffee Shop / Cafe</fullName>
            </value>
            <value>
                <fullName>Leisure / Rec</fullName>
            </value>
            <value>
                <fullName>Fast Food</fullName>
            </value>
            <value>
                <fullName>Casual Dining</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Workplace</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Care Home</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>