bundled_metadata/force-app/main/default/objects/AFH_POS_Kits_Order_Logic__mdt/fields/AFH_Interval_in_Months__c.field-meta.xml
<CustomField>
    <fullName>AFH_Interval_in_Months__c</fullName>
    <label>AFH Interval (in Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>