bundled_metadata/force-app/main/default/objects/AFH_POS_Kits_Order_Logic__mdt/fields/AFH_Max_Quantity_per_type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Max_Quantity_per_type__c</fullName>
    <label>AFH Max Quantity per type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>