bundled_metadata/force-app/main/default/objects/AFH_POS_Kits_Order_Logic__mdt/fields/AFH_POS_Name__c.field-meta.xml
<CustomField>
    <fullName>AFH_POS_Name__c</fullName>
    <label>AFH POS Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doritos</fullName>
                <default>true</default>
                <label>Doritos</label>
            </value>
            <value>
                <fullName>Pipers</fullName>
            </value>
            <value>
                <fullName>Walkers</fullName>
            </value>
            <value>
                <fullName>Quaker</fullName>
            </value>
            <value>
                <fullName>Walkers Loaded</fullName>
            </value>
            <value>
                <fullName>Doritos Loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>